<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Reboot Android TV</string>

  <string name="common_about">About</string>
  <string name="common_cancel">Cancel</string>
  <string name="common_license">License</string>
  <string name="common_reboot">Reboot</string>
  <string name="common_settings">Settings</string>

  <string name="activity_reboot_title">@string/common_reboot</string>
  <string name="activity_reboot_actionItem_reboot_text">@string/common_reboot</string>
  <string name="activity_reboot_actionItem_rebootBootloader_text">Reboot Bootloader</string>
  <string name="activity_reboot_actionItem_rebootRecovery_text">Reboot Recovery</string>
  <string name="activity_reboot_actionItem_settings_text">@string/common_settings</string>
  <string name="activity_reboot_actionItem_cancel_text">@string/common_cancel</string>
  <string name="activity_reboot_actionItem_about_text">@string/common_about</string>

  <string name="activity_quickReboot_title">Quick Reboot</string>

  <string name="activity_about_title">@string/common_about</string>
  <string name="activity_about_appName">@string/app_name</string>
  <string name="activity_about_version">Version: %s</string>
  <string name="activity_about_description">This app allows you to reboot your Android TV device from the launcher home screen rather than sideloading an already existing app that won\'t show up on the default Android TV launcher.\n\nPlease note that this app is for ROOTED DEVICES ONLY.</string>
  <string name="activity_about_productURL">http://bsara.github.io/reboot-android-tv</string>
  <string name="activity_about_personalURL">https://bsara.github.io</string>
  <string name="activity_about_copyright">Copyright © 2015 Brandon Sara (http://bsara.github.io)</string>
  <string name="activity_about_licenseHeader">@string/common_license</string>
  <string name="activity_about_licenseInfo">Licensed under The Code Project Open License (CPOL) 1.02.</string>
  <string name="activity_about_viewLicense">View Full License</string>

  <string name="activity_license_title">@string/common_license</string>
  <string name="activity_license_url_domain">http://bsara.github.io</string>
  <string name="activity_license_url">http://bsara.github.io/reboot-android-tv/license/</string>

  <string name="activity_prefs_title">@string/common_settings</string>

  <string name="dialog_rebootVerification_msg">Are you sure that you want to reboot the device?</string>
  <string name="dialog_rebootVerification_negativeButton">@string/common_cancel</string>
  <string name="dialog_rebootVerification_positiveButton">@string/common_reboot</string>

  <string name="errMsg_rebootError">ERROR! Reboot Aborted!</string>

  <string name="prefs_enableMainRebootBanner">Enable Main Reboot Banner</string>
  <string name="prefs_enableQuickRebootBanner">Enable Quick Reboot Banner</string>

  <string name="prefs_key_enableMainRebootBanner">enableMainRebootBanner</string>
  <string name="prefs_key_enableQuickRebootBanner">enableQuickRebootBanner</string>
</resources>
